<resources>
    <string name="app_name">BHCPF | NiCare</string>
    <string name="action_settings">Settings</string>
    <string name="btn_enrol">Enrol (2 times)</string>
    <string name="btn_capture">Capture (1 times)</string>
    <string name="tv_ready"></string>
    <string name="btn_forever">Capture Forever</string>
    <string name="title_activity_login">Login</string>
    <string name="dont_have_account">Forgot Your NiCare Account password?</string>
    <string name="login">Log in</string>
    <string name="nicare">NiCare</string>
    <string name="login_instructon">Provide your NiCare profile Email and Password to login</string>
    <string name="title_activity_enrolled">Enrolees</string>
    <string name="principal">Principal</string>
    <string name="title_activity_enrolled_detail">NiCare Records</string>
    <string name="dependents">Dependent(s)</string>
    <string name="add_spouse">Enroll Dependent</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_enrolment">NiCare Enrolment</string>
    <string name="title_activity_biometric">Enrol Fingerprint</string>
    <string name="title_activity_main">NiCare Mobile</string>
    <string name="content_authority">com.nicare.ees</string>
    <string name="sync_account_type">com.nicare.ees</string>
    <string name="title_activity_setting">Settings</string>
    <string name="sync_pref">Sync</string>
    <string name="sync_pref_summary">Automatically synchronize record with server</string>
    <string name="pref_connection_type_tittle">Sync Connection Type</string>
    <string name="pref_connection_type_default">WiFi/Mobile Data</string>
    <string name="pref_connection_type_summary">WiFi</string>
    <string name="principal_id">id</string>
    <string name="pref_device_type_tittle">Biometric Device</string>
    <string name="pref_device_type_default">FP07 Biometric</string>
    <string name="pref_device_type_summary">USB Biometric</string>
    <string name="title_formal_sector">Formal Sector</string>
    <string name="pref_biometric_type_default">FP07 Biometric</string>
    <string name="title_activity_record_update">Biodata update</string>
    <string name="title_activity_enrolled_dependent">NiCare Dependent</string>
    <string name="title_activity_verified_detail">NiCare Detail</string>
    <string name="title_activity_enroll_principal">NiCare Principal</string>
    <string name="title_activity_enroll_dependent">NiCare Dependent</string>
    <string name="title_activity_enrol_vulnerable">NiCare Vulnerable</string>
    <string name="title_activity_enrolment_main">Principal Detail</string>
    <string name="biometric_error">You\'ve not capture Fingerprint for this enrolee, please capture  fingerprint to proceed</string>
    <string name="title_activity_enrolled_dependent_pin_v">NiCare PIN</string>
    <string name="btn_match">Match</string>
    <string name="tv_null"></string>
    <string name="rd_text1">ANSI378-2004</string>
    <string name="rd_text2">ISO19794-2005</string>
    <string name="rd_text3">ISO19794-2009</string>
    <string name="rd_text4">ISO19794-2011</string>
    <string name="action_dir0">Default</string>
    <string name="action_dir1">Mirror Vertically </string>
    <string name="action_dir2">Mirror Horizontally</string>
    <string name="action_dir3">Rotate 180</string>
    <string name="action_test">Match Test</string>
    <string name="title_activity_uare_umain">UareUMainActivity</string>
    <string name="server_error">Oops!!! An error occur while communicating with sever, please try a</string>
    <string name="network_failure">Network Failure</string>
    <string name="error_msg">Error message</string>
    <string name="msg_error">Please fill in all fields before saving record</string>
    <string name="title_activity_live_dependent_enolment">Enroll Beneficiary</string>
    <string name="title_activity_live_dependent_enrolment_id">Principal\'s Enrolment ID</string>
    <string name="title_activity_offline_records">Enrolled Beneficiaries</string>
    <string name="title_activity_vulnerable_list">Vulnerables</string>
    <string name="title_activity_formal_list">Formal Sector</string>
    <string name="title_activity_synced_enrolment_detail">Enroll Beneficiary</string>
    <string name="title_activity_edit">Info Update</string>
    <string name="title_activity_capture_id">Enrolee Capturing</string>
    <string name="title_activity_capture_detail">Enrolee Capturing</string>
    <string name="title_activity_choose_enrolment">Enrol Beneficiary</string>
    <string name="photo_error">You\\\'ve not capture Photo for this user, please capture photo to proceed</string>
    <string name="logout">Logout</string>
    <string name="title_activity_password_auth">NiCare EES</string>
    <string name="number_zero">0</string>
    <string name="number_one">1</string>
    <string name="number_two">2</string>
    <string name="number_three">3</string>
    <string name="number_four">4</string>
    <string name="number_five">5</string>
    <string name="number_six">6</string>
    <string name="number_seven">7</string>
    <string name="number_eight">8</string>
    <string name="number_nine">9</string>
    <string name="btn_clear">Clear</string>
    <string name="btn_backspace">Back</string>
    <string name="surname">Surname</string>
    <string name="first_name">First Name</string>
    <string name="other_name">Other Name</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="phone_number">Phone number</string>
    <string name="email_address">Email address</string>
    <string name="home_address">Home address</string>
    <string name="residential_address">Residential Address:</string>
    <string name="next_of_kin_details">Next of Kin(s) Details:</string>
    <string name="next_of_kin_full_name">Next of Kin Full Name [Surname : and Othername]</string>
    <string name="next_of_kin_phone_number">Next of Kin Phone number</string>
    <string name="bio_data">Bio Data</string>
    <string name="facial">Facial</string>
    <string name="biometric">Biometric</string>
    <string name="premium_type">PREMIUM TYPE</string>
    <string name="vulnerable_pin">Vulnerable PIN</string>
    <string name="not_captured">NOT CAPTURED</string>
    <string name="biometric_status">BIOMETRIC STATUS</string>
    <string name="photo_icon_description">Photo Icon</string>
    <string name="camera_icon_description">Camera Icon</string>
    <string name="bio_data_icon_description">Bio Data Icon</string>
    <string name="individual_pin">Individual PIN</string>
    <string name="choose_alternative_provider">Choose different provider from that of principal</string>
    <string name="dependent_type">DEPENDENT TYPE</string>
    <string name="biometric_icon_description">Biometric icon</string>
    <string name="new_enrolment">New Enrolment</string>
    <string name="enrolled_records">Enrolled Records</string>
    <string name="user_capture">User Capture</string>
    <string name="nicare_account">NiCare Account</string>
    <string name="_1000_pin_left">1000 PIN Left</string>
    <string name="_253_usage">253 usage</string>
    <string name="_0_uploads">0 uploads</string>
    <string name="last_sync">Last Sync 12/06/2019</string>
    <string name="ward_lga">Wadata Ward, Bida Niger State</string>
    <string name="biometric_capture">Fingerprint Capture</string>
    <string name="eo_profile_icon">EO Profile Icon</string>
    <string name="enrolment_icon">Enrolment Icon</string>
    <string name="enrolees_list_icon">Enrolees List Icon</string>
    <string name="install_update_now">Install Now</string>
    <string name="any_new_update_has_been_downloaded">Your update is ready to install</string>
    <string name="available_pin_s_icon">Available Pin\'s</string>
    <string name="used_pin_s_icon">Used Pin\'s Icon</string>
    <string name="uploads_icon">Uploads Icon</string>
    <string name="take_picture">Take Picture</string>
    <string name="na_personal">Bio Data</string>
    <string name="nav_photo">Photo</string>
    <string name="nav_fingerprint">Fingerprint</string>
    <string name="title_activity_premium_sales">Premium Sales</string>
    <string name="confirm_password">Confirm New Account Password</string>
    <string name="new_password">New Account Password</string>
    <string name="old_password">Old Account Password</string>
    <string name="confirm_pin">Confirm New Device Level PIN</string>
    <string name="new_pin">New Device Level PIN</string>
    <string name="old_pin">Old Device Level PIN</string>
    <string name="title_activity_edit_info">Update Principal</string>
    <string name="java_entry_title">Run the ML Kit quickstart written in Java</string>
    <string name="kotlin_entry_title">Run the ML Kit quickstart written in Kotlin</string>
    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>
    <string name="toggle_turn_on">Front</string>
    <string name="toggle_turn_off">Back</string>
    <string name="desc_camera_source_activity">Vision detectors demo with live camera preview</string>
    <string name="desc_still_image_activity">Vision detectors demo with a still image</string>
    <string name="desc_camerax_live_preview_activity">Vision detectors demo with live preview using CameraX. Note that CameraX is only supported on API 21+</string>
    <string name="download_error">Download error</string>
    <string name="start_over">Start over</string>
    <string name="menu_item_settings">Settings</string>
    <string name="select_image">Select image</string>
    <string name="pref_screen_title_live_preview">Live preview settings</string>
    <string name="pref_screen_title_still_image">Still image settings</string>
    <string name="pref_screen_title_camerax_live_preview">CameraX live preview settings</string>
    <string name="pref_category_face_detection">Face Detection</string>
    <string name="pref_category_object_detection">Object Detection / Custom Object Detection</string>
    <string name="pref_category_automl">AutoML Image Labeling</string>
    <string name="pref_category_key_camera" translatable="false">pckc</string>
    <string name="pref_category_title_camera">Camera</string>
    <string name="pref_key_rear_camera_preview_size" translatable="false">rcpvs</string>
    <string name="pref_key_rear_camera_picture_size" translatable="false">rcpts</string>
    <string name="pref_key_front_camera_preview_size" translatable="false">fcpvs</string>
    <string name="pref_key_front_camera_picture_size" translatable="false">fcpts</string>
    <string name="captureAutoOn">Capture With Auto On</string>
    <string name="capture">Capture Without Auto On</string>
    <string name="led">LED</string>
    <string name="sdktest">SDK Test</string>
    <string name="match">Verify</string>
    <string name="matchAutoOn">Verify With Auto On</string>
    <string name="register">Register</string>
    <string name="registerAutoOn">Register With Auto On</string>
    <string name="welcome">Welcome!</string>
    <string name="cb_matched">Match</string>
    <string name="nfiq">NFIQ</string>
    <string name="mode_n">Mode N</string>
    <string name="smart_capture">Smart Capture</string>
    <string name="fingerprint_capture_image">Fingerprint capture image</string>
    <string name="fingerprint_register_image">Fingerprint register image</string>
    <string name="fingerprint_verify_image">Fingerprint verify image</string>
    <string name="read_serial_number">Read S/N</string>
</resources>