<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="CONNECTION">

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="pref_sync"
            android:summary="@string/sync_pref_summary"
            android:title="@string/sync_pref" />

        <ListPreference
            android:dependency="pref_sync"
            android:defaultValue="@string/pref_connection_type_default"
            android:entries="@array/pref_sync_connection_types"
            android:entryValues="@array/pref_sync_connection_types"
            android:key="pref_sync_connection_type"
            android:summary="@string/pref_connection_type_summary"
            android:title="@string/pref_connection_type_tittle" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="Device">

        <ListPreference
            android:key="pref_biometric"
            android:defaultValue="@string/pref_biometric_type_default"
            android:entries="@array/pref_biometric_types"
            android:entryValues="@array/pref_biometric_types"
            android:summary="@string/pref_device_type_summary"
            android:title="@string/pref_device_type_tittle" />

    </PreferenceCategory>




</PreferenceScreen>