<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2011 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
     
-->
<AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ImageView
        android:id="@+id/imageViewVerify"
        android:layout_width="101dp"
        android:layout_height="124dp"
        android:layout_x="111dp"
        android:layout_y="237dp"
        android:contentDescription="@string/fingerprint_verify_image"
        android:src="@android:drawable/picture_frame" />

    <Button
        android:id="@+id/buttonMatch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="120dp"
        android:layout_y="364dp"
        android:text="@string/match"
        android:textSize="10sp" />

    <ImageView
        android:id="@+id/imageViewFingerprint"
        android:layout_width="134dp"
        android:layout_height="162dp"
        android:layout_x="4dp"
        android:layout_y="33dp"
        android:contentDescription="@string/fingerprint_capture_image"
        android:src="@android:drawable/picture_frame" />

    <Switch
        android:id="@+id/switchNFIQ"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_x="240dp"
        android:layout_y="285dp"
        android:text="@string/nfiq" />

    <Button
        android:id="@+id/buttonCapture"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_x="147dp"
        android:layout_y="87dp"
        android:text="@string/capture"
        android:textSize="10sp" />

    <Switch
        android:id="@+id/switchSmartCapture"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_x="241dp"
        android:layout_y="320dp"
        android:text="@string/smart_capture" />

    <Button
        android:id="@+id/buttonSDKTest"
        android:layout_width="108dp"
        android:layout_height="wrap_content"
        android:layout_x="265dp"
        android:layout_y="143dp"
        android:text="@string/sdktest"
        android:textSize="10sp" />

    <Button
        android:id="@+id/buttonReadSN"
        android:layout_width="111dp"
        android:layout_height="wrap_content"
        android:layout_x="147dp"
        android:layout_y="143dp"
        android:textSize="10sp"
        android:text="@string/read_serial_number" />

    <ImageView
        android:id="@+id/imageViewRegister"
        android:layout_width="101dp"
        android:layout_height="124dp"
        android:layout_x="4dp"
        android:layout_y="236dp"
        android:contentDescription="@string/fingerprint_register_image"
        android:src="@android:drawable/picture_frame" />

    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="12dp"
        android:layout_y="364dp"
        android:text="@string/register"
        android:textSize="10sp" />

    <CheckBox
        android:id="@+id/checkBoxMatched"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="239dp"
        android:layout_y="369dp"
        android:clickable="false"
        android:text="@string/cb_matched"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/editLog"
        android:layout_width="378dp"
        android:layout_height="212dp"
        android:layout_x="13dp"
        android:layout_y="508dp"
        android:autoText="true"
        android:bufferType="normal"
        android:clickable="false"
        android:editable="false"
        android:enabled="true"
        android:fadeScrollbars="false"
        android:freezesText="false"
        android:gravity="bottom"
        android:inputType="none|textMultiLine"
        android:isScrollContainer="true"
        android:linksClickable="true"
        android:longClickable="false"
        android:saveEnabled="false"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        android:scrollbarStyle="outsideInset"
        android:scrollbars="vertical"
        android:scrollHorizontally="true"
        android:shadowColor="#251111"
        android:textIsSelectable="false"
        android:textSize="11sp"
        android:verticalScrollbarPosition="right"
        android:visibility="visible" />

    <TextView
        android:id="@+id/textViewResult"
        android:layout_width="379dp"
        android:layout_height="wrap_content"
        android:layout_x="4dp"
        android:layout_y="4dp"
        android:text="@string/welcome"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="17dp"
        android:layout_y="483dp"
        android:text="Log Output (SCROLL)"
        android:visibility="visible" />

    <Switch
        android:id="@+id/switchModeN"
        android:layout_width="121dp"
        android:layout_height="39dp"
        android:layout_x="257dp"
        android:layout_y="470dp"
        android:text="@string/mode_n" />

    <Button
        android:id="@+id/buttonCaptureAutoOn"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_x="147dp"
        android:layout_y="33dp"
        android:textSize="10sp"
        android:text="@string/captureAutoOn" />

    <Switch
        android:id="@+id/switchLED"
        android:layout_width="118dp"
        android:layout_height="wrap_content"
        android:layout_x="240dp"
        android:layout_y="250dp"
        android:text="@string/led" />

    <Button
        android:id="@+id/buttonRegisterAutoOn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="7dp"
        android:layout_y="420dp"
        android:textSize="10sp"
        android:text="@string/registerAutoOn" />

    <Button
        android:id="@+id/buttonVerifyAutoOn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="204dp"
        android:layout_y="420dp"
        android:textSize="10sp"
        android:text="@string/matchAutoOn" />

    <TextView
        android:id="@+id/textViewFDLevel"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_x="4dp"
        android:layout_y="208dp"
        android:text="Fake Threshold" />

    <SeekBar
        android:id="@+id/seekBarFDLevel"
        style="@style/Widget.AppCompat.SeekBar"
        android:layout_width="231dp"
        android:layout_height="wrap_content"
        android:layout_x="149dp"
        android:layout_y="208dp"
        android:max="1"
        android:progress="1" />

</AbsoluteLayout>