<?xml version="1.0" encoding="utf-8"?>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <EditText
            android:id="@+id/password_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:minHeight="48dp"
            android:focusable="false"
            android:textAlignment="center"
            android:inputType="numberPassword"
            android:paddingLeft="8dp"
            android:maxLength="8"
            android:background="@drawable/reg_edit_text_border"
            android:paddingRight="8dp"
            android:textSize="22sp"
            android:singleLine="true"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:gravity="center_horizontal" />

        <TableLayout
            android:id="@+id/keyboard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:divider="@drawable/keyboard_divider"
            android:orientation="vertical"
            android:showDividers="beginning|middle|end">

            <TableRow style="@style/keyboard_row">

                <TextView
                    android:id="@+id/t9_key_1"
                    style="@style/keyboard_number_button"
                    android:text="@string/number_one"/>

                <TextView
                    android:id="@+id/t9_key_2"
                    style="@style/keyboard_number_button"
                    android:text="@string/number_two"/>

                <TextView
                    android:id="@+id/t9_key_3"
                    style="@style/keyboard_number_button"
                    android:text="@string/number_three"/>
            </TableRow>

            <TableRow style="@style/keyboard_row">

                <TextView
                    android:id="@+id/t9_key_4"
                    style="@style/keyboard_number_button"
                    android:text="@string/number_four"/>

                <TextView
                    android:id="@+id/t9_key_5"
                    style="@style/keyboard_number_button"
                    android:text="@string/number_five"/>

                <TextView
                    android:id="@+id/t9_key_6"
                    style="@style/keyboard_number_button"
                    android:text="@string/number_six"/>
            </TableRow>

            <TableRow style="@style/keyboard_row">

                <TextView
                    android:id="@+id/t9_key_7"
                    style="@style/keyboard_number_button"
                    android:text="@string/number_seven"/>

                <TextView
                    android:id="@+id/t9_key_8"
                    style="@style/keyboard_number_button"
                    android:text="@string/number_eight"/>

                <TextView
                    android:id="@+id/t9_key_9"
                    style="@style/keyboard_number_button"
                    android:text="@string/number_nine"/>
            </TableRow>

            <TableRow style="@style/keyboard_row">

                <ImageView
                    android:id="@+id/t9_key_clear"
                    style="@style/keyboard_button"
                    android:tint="@color/orange_red"
                    app:srcCompat="@drawable/ic_clear_black_24dp"
                    android:textAppearance="?android:attr/textAppearanceMedium"/>

                <TextView
                    android:id="@+id/t9_key_0"
                    style="@style/keyboard_number_button"
                    android:text="@string/number_zero"/>

                <ImageView
                    android:id="@+id/t9_key_backspace"
                    style="@style/keyboard_button"
                    app:srcCompat="@drawable/ic_keyboard_backspace_black_24dp"
                    android:textAppearance="?android:attr/textAppearanceMedium"/>
            </TableRow>

        </TableLayout>
    </LinearLayout>