<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="400dp"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center"
    app:cardCornerRadius="8dp"
    android:orientation="vertical">
<LinearLayout
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_margin="32dp"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:gravity="center"
        android:background="@drawable/reg_edit_text_border"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:fontFamily="@font/roboto_medium"
        android:layout_marginBottom="8dp"
        >

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/logo"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:gravity="center"
            android:layout_toRightOf="@+id/imageView"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="@color/colorPrimary"
                android:gravity="center"
                android:fontFamily="@font/roboto_medium"
                android:text="Niger State Contributory Health Agency"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/roboto_regular"
                android:text="NiCare Mobile EES"/>

        </LinearLayout>


    </RelativeLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:maxLines="1"
        app:hintEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtOldPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/old_password"
            android:inputType="textPassword"
            android:textSize="18sp" />

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginBottom="8dp"
        app:hintEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/new_password"
            android:inputType="textPassword"
            android:textSize="18sp"
            android:maxLines="1"

            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginBottom="16dp"
        app:hintEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
android:maxLines="1"
            android:inputType="textPassword"
            android:hint="@string/confirm_password" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnChange"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:textColor="@color/white"
        android:focusableInTouchMode="true"
        android:fontFamily="@font/roboto_regular"
app:cornerRadius="4dp"
        android:text="change password"/>

</LinearLayout>
</androidx.cardview.widget.CardView>